# mprpc

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  note.md
example/: Makefile  all.pb.cc  all.pb.h  all.proto  cmake_install.cmake  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  Makefile  allservice.cc  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcconfig.h  rpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  lockqueue.cc  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  mprpcapplication.h  mprpcchannel.h  mprpccontroller.h  zookeeperutil.h
test/protobuf/: a.out  main.cc  test  test.pb.cc  test.pb.h  test.proto
